partial solution for correct answer updates, but could not handle questions with zero correct answers

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,3 +1,9 @@
+<!--
+TODO:
+* overall stats for the class (mean/max/min/median # CQs,
+  length of CQs, fraction of CQs with 1 vs 2 votes)
+* total number of questions
+-->
 <h1>Courses#show</h1>
 <center><h1> <%= @course.folder_name %> </h1></center>
 <center><h1> <%= @course.term %> <%= @course.year %>
