Bug fix: renaming session to class_period
Fixed bug in question.rb to handle and sort updates, and in the class_periods_controller to get rid of unpermitted paramter message.

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -11,8 +11,8 @@
 <table border=1>
   <tr>
     <th> date </th>
-    <th> session name </th>
-    <th> link to session </th>
+    <th> class period name </th>
+    <th> link to class period </th>
     <th> num questions </th>
     <th> avg num secs / question </th>
   </tr>
