Fixed bug: forgot to rename sessions_helper to class_periods_helper
Forgot to rename sessions_helper to class_periods_helper as part of the renaming of session to class_periods

--- a/app/views/class_periods/show.html.erb
+++ b/app/views/class_periods/show.html.erb
@@ -1,5 +1,6 @@
 <h2>
 <center>
+  <%# TODO: Make this information for course into a method %>
   <%= @course.term %>
   <%= @course.year %> <%= @course.institution %> <br>
   <%= @course.instructor %> <br>
