can dynamically set/unset types and pairs
Using coffeescript and jquery to dynamically set and unset pairs and types. It's not perfect (you can still change the type from 'paired' to something else while a question is part of a pair) but it's pretty good.

--- a/app/views/class_periods/show.html.erb
+++ b/app/views/class_periods/show.html.erb
@@ -85,9 +85,11 @@
       %>
     </td>
     <td>
+<%# HACK: creating this.oldvalue in the DOM to store the previously selected value %>
       <%= q.select :question_pair, question_pair_options(q.object, @questions),
         { include_blank: true },
-        { onChange: "question_pair_handler( #{q.object.question_index}, $(this).val() );",
+        { onclick: "this.old_question_pair = $(this).val();",
+          onchange: "question_pair_handler( #{q.object.question_index}, $(this).val(), this.old_question_pair );",
           class: "question_pair_#{q.object.question_index}" } %>
     </td>
     <td class="imagecolumn">
