highlighting rows that still need to be finished
When vieweing either courses or class periods, we highlight the ones that still have data to be entered

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -62,26 +62,8 @@ tr.todo td {
   background-color: #cccccc;
 }
 
-tr.r0 td {
-  background-color: #cc9999;
-}
-tr.r1 td {
-  background-color: #9999cc;
-}
-//tr.r2 td {
-//  background-color: #99cc99;
-//}
-tr.nonmcq td {
-  background-color: #9a9a9a;
-}
-tr.spurious td {
-  background-color: #a9a9a9;
-}
-tr.individual td {
-  background-color: #99cc99;
-}
-tr.unknown td {
-  background-color: #ffffff;
+td.todo {
+  background-color: #cccccc;
 }
 
 // Tooltips
