--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -6,8 +6,9 @@
     <th> Year </th>
     <th> School </th>
     <th> Instructor </th>
-    <th> avg num questions / class </th>
-    <th> avg num secs / question </th>
+    <th> avg num Qs<br> / class </th>
+    <th> avg num secs<br> / question </th>
+    <th> num Qs to update<br> / total Qs </th>
   </tr>
   <% @courses.each do |course| %>
     <tr>
@@ -21,6 +22,13 @@
       <td> <%= course.instructor %> </td>
       <td> <%= @all_class_stats[course.id][:avg_num_questions].round(1) %> </td>
       <td> <%= @all_class_stats[course.id][:avg_time].round(1) %> </td>
+      <% if @class_period_updated_counts[course.id][0] > 0 %>
+        <td class="todo">
+      <% else %>
+        <td>
+      <% end %>
+        <%= to_s_fraction(@class_period_updated_counts[course.id]) %>
+      </td>
     </tr>
   <% end %>
 </table>
