fixed bug with question_type to be accurate
Had left off "quiz" as a possible question type

--- a/app/views/class_periods/show.html.erb
+++ b/app/views/class_periods/show.html.erb
@@ -59,10 +59,11 @@ http://railscasts.com/episodes/324-passing-data-to-javascript
     <th class="mytooltip"> q type
       <span class="tooltiptext top"> Type of question. Possibilities are<br>
         0: unknown<br>
-        1: individual<br>
-        2: paired<br>
-        3: non-MCQ<br>
-        4: error<br>
+        1: quiz<br>
+        2: single<br>
+        3: paired
+        4: non-MCQ<br>
+        5: error<br>
       </span>
     </th>
     <th class="mytooltip"> pair #
