--- a/app/views/class_periods/show.html.erb
+++ b/app/views/class_periods/show.html.erb
@@ -26,28 +26,62 @@
 <%# TODO: Make this an AJAX call. Inlining it is not elegant.
 http://railscasts.com/episodes/324-passing-data-to-javascript
 %>
+<p> old dynamic course selected: <%= @old_dynamic_course_selected %>
+</p>
+<p> old dynamic course selected (esc-js): <%= escape_javascript(@old_dynamic_course_selected) %>
+</p>
+<script type="text/javascript">
+  <%#
+    puts "\n\n\n" + @old_dynamic_course_selected + "\n\n\n"
+  %>
+  //console.log("1-2-3 <%=j @old_dynamic_course_selected %>");
+  //console.log("goddamit <%=j @old_dynamic_course_selected %>");
+  //window.old_dynamic_course_selected = "<%=j @old_dynamic_course_selected %>";
+  //window.old_dynamic_class_period_selected = "<%=j @old_dynamic_class_period_selected %>";
+  //window.old_dynamic_question_selected = "<%= @old_dynamic_question_selected %>";
+</script>
+
 <%= javascript_tag do %>
-  var course_hash = <%=raw @course_hash.to_json %>;
+  //console.log("1-2-3 <%=raw @old_dynamic_course_selected%>");
+  //console.log("goddamit <%=j @old_dynamic_course_selected%>");
+  window.old_dynamic_course_selected = "<%=j @old_dynamic_course_selected %>";
+  window.old_dynamic_class_period_selected = "<%=j @old_dynamic_class_period_selected %>";
+  window.old_dynamic_question_selected = "<%=j @old_dynamic_question_selected %>";
+  var course_hash = <%=raw @course_hash.to_json.gsub("\n", '') %>;
   window.onload = dynamic_image_handler(course_hash, true);
+
+/*
+  $( document ).ready(function() {
+    console.log("old course selected is <%= @old_dynamic_course_selected %>");
+    $("#old_dynamic_course_selected").val("<%= @old_dynamic_course_selected %>");
+    //$("#old_dynamic_course_selected").val("bla");
+    console.log("foo "+ $("#old_dynamic_course_selected").val());
+    $("#old_dynamic_class_period_selected").val("<%= @old_dynamic_class_period_selected %>");
+    $("#old_dynamic_question_selected").val("<%= @old_dynamic_question_selected %>");
+  });
+*/
 <% end %>
 
 <table frame=box rules=none>
 <tr>
-  <td colspan="4"><b>QUICK PREVIEW</b> to preview questions from other classes; useful
-  for finding matching questions across classes.
+  <td colspan="4"><b>QUICK PREVIEW</b> to preview questions from other classes;
+  useful for finding matching questions across classes.
   </td>
 </tr>
 <tr>
   <td>
     <select name="course" id="dynamic_course" onchange="dynamic_image_handler(course_hash, false)">
+      <option name=""></option>
     </select>
   </td>
   <td>
     <select name="class_period" id="dynamic_class_period" onchange="dynamic_image_handler(course_hash, false)">
+      <option name=""></option>
     </select>
   </td>
   <td>
     <select name="question" id="dynamic_question" onchange="dynamic_image_handler(course_hash, false)">
+      <option name=""></option>
     </select>
   </td>
   <td>
@@ -59,6 +93,9 @@ http://railscasts.com/episodes/324-passing-data-to-javascript
 </table>
 
 <%= form_tag(class_period_path(@class_period), method: :patch) do %>
+<input type="hidden" id="old_dynamic_course_selected" name="old_dynamic_course_selected" value=""/>
+<input type="hidden" id="old_dynamic_class_period_selected" name="old_dynamic_class_period_selected" value=""/>
+<input type="hidden" id="old_dynamic_question_selected" name="old_dynamic_question_selected" value=""/>
 <%= submit_tag 'Update data' %>
 <table border=1>
   <tr>
