increased size of update button

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -21,6 +21,11 @@ textarea {
   font-size: 3em;
 }
 
+.updatebutton {
+  text-align: center;
+  font-size: 2em;
+}
+
 .lastclassperiod {
   text-align: center;
   color: black;
