refactored coffeescript function for modals into shared file

--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -7,7 +7,7 @@ TODO: quick preview
 </div>
 
 <%= javascript_tag do %>
-  window.onload = load_page_handler();
+  window.onload = Shared.setup_modal_image();
 <% end %>
 
 <%#
